[metadata]
name = luneth_engine
version = 1.2.2
author = Ido Badash
author_email = idoba12012011@gmail.com
description = A lightweight, expandable Python engine for building 2D games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ido-Badash/luneth_engine
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.package_data]
luneth_engine = 
    tests/*.py
